2003/09/13 niteria
- Implemented Feature 777489: More User Tools Icons
- Fixed Bug 805454: Single File Compiling fails if project is loaded

2003/08/11 niteria
- Updated the URL for downloading dictionaries.
   Points now to: http://lingucomponent.openoffice.org/download_dictionary.html

2003/07/24 niteria
- Implemented Feature 776912: Parse for even unknown environments

2003/07/18 titoo
- Implemented Feature 567832: Equations in Structure/Object View

2003/07/15 niteria
- Fixed Bug 702814: TXC doesn't save last opened folder after cancelling

2003/06/13 niteria
- Implemented Feature 753658: Scan for Project on Opening a Document
   (Still open question: Ability to switch this off in the options?)
- Implemented Feature 748870: Insert graphics dialogue file type filter too limited
   (Added *.jpg, *.jpeg and *.png)

2003/06/05 niteria
- Implemented Feature 675205: One-Click Project Creation for existing Documents
- Implemented Feature 588960: Disable build for unsaved files
   (==> Prompts the user to save the file instead of disabling the command)
- Fixed Bug 592338: Ghost File when cancelling "New Project"

2003/04/30 christianwelzel
- Fixed Bug 602329: File>Print and HP LaserJet 4050.

2003/03/13 christianwelzel
- Implemented Feature 614342: Last opened folder.
- Fixed Feature 535144: Specifying Output Profile in TeX file.

2003/03/08 niteria
- Fixed Bug 700129: cosh instead of \cosh
- Fixed Bug 699688: "Save As"-Dialog with wrong InitDir.

2003/03/04 christianwelzel
- Implemented Feature 551294: Storing MRU Profile with Project.
- Implemented Feature 535144: Specifying Output Profile in TeX file.

2003/01/22 niteria
- Fixed Bug 670414: syntax highlighting with verbatim env fails.
  A small problem concerning verbatim env still remains. This is mostly due to the
  old fashioned Syntaxhighlighting. Switching to a newer CrystalEdit will eliminate
  a lot of highlighting problems.

2003/01/15 niteria